In Kleopatra we want to be able to perform a WKD lookup while doing a general lookup on external servers. This lookup should not automatically import the found keys. We need support for this in QGpgME.
Description
Description
Revisions and Commits
Revisions and Commits
| rGPGMEPP Gpgme plus plus | |||
| rGPGMEPP30be7f795c26 cpp,tests: Add test runner for doing a WKD lookup without import | |||
| rM GPGME | |||
| rMaf820811ec7d qt: Add pattern used for WKD lookup to result | |||
| rM3a43d9dc6797 qt,tests: Skip WKD lookup tests by default | |||
| rMed7e7df2e14f qt: Support WKD lookup without implicit import | |||
| rMf3177d3ee0a1 cpp,tests: Add test runner for doing a WKD lookup without import | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Resolved | • ikloecker | T5334 Kleopatra: Add more support for WKS / WKD | ||
| Resolved | • ikloecker | T5728 qgpgme: Add support for doing a WKD lookup without implicit import |
Event Timeline
Comment Actions
Nice. The way with KS_GET and assuan is much better then I thought about using a temporary home and a --locate-key